test/positive/feature_protectedfields.java

public class feature_protectedfields {
  public feature_protectedfields() {}
  protected int x;
}

