test/negative/FieldsWithSameName.java
public class FieldsWithSameName {
    public FieldsWithSameName() {}
    public int a;
    public int a;
}
